force-app/main/default/objects/EquipmentDeliveryLineItem__c/EquipmentDeliveryLineItem__c.object-meta.xml
<CustomObject>
    <label>장비배송 상제</label>
    <nameField>
        <label>Equipment Delivery Line Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>