force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/DeliveryId__c.field-meta.xml
<CustomField>
    <fullName>DeliveryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery ID</label>
    <referenceTo>EquipmentDelivery__c</referenceTo>
    <relationshipLabel>Equipment Delivery Line Item</relationshipLabel>
    <relationshipName>Equipment_Delivery_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>