force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/DeliveryLineItemNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLineItemNumber__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Delivery Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>