force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/GrossUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>GrossUnitPrice__c</fullName>
    <label>Gross Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>