force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/OriginalQuantity__c.field-meta.xml
<CustomField>
    <fullName>OriginalQuantity__c</fullName>
    <label>Quantity on the Original Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>