force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>