force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/RequestLineItemId__c.field-meta.xml
<CustomField>
    <fullName>RequestLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Line Item ID</label>
    <referenceTo>EquipmentRequestLineItem__c</referenceTo>
    <relationshipLabel>Equipment Delivery Line Item</relationshipLabel>
    <relationshipName>Equipment_Delivery_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>