force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/ReshipReason__c.field-meta.xml
<CustomField>
    <fullName>ReshipReason__c</fullName>
    <label>Reship Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>