force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>