force-app/main/default/objects/EquipmentDeliveryLineItem__c/fields/TotalLineAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalLineAmount__c</fullName>
    <label>Line Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>